<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Cartographe</string>
	<string name="menu_settings">Paramètres</string>
	<string name="title_activity_start">Demarrage</string>
	<string name="title_activity_home">Accueil</string>
	<string name="action_settings">Settings</string>
	<string name="title_activity_uibatiment">Bâtiment</string>
	<string name="title_section1">Section 1</string>
	<string name="title_section2">Section 2</string>
	<string name="title_section3">Section 3</string>
	<string name="title_activity_uiniveau">Niveau</string>
	<string name="title_activity_uirepere">Repère</string>
	<string name="label_delete">Supprimer</string>
	<string name="label_see_details">Voir les détails</string>
	<string name="label_measures">Mesures</string>
	<string name="label_level">Niveau</string>
	<string name="label_new_level">Nouveau niveau \:</string>
	<string name="label_building">Bâtiment</string>
	<string name="label_spot">Repère</string>
	<string name="label_POI">Point d\'intérêt</string>
	<string name="label_zone">Zone</string>
	<string name="label_levels">Les niveaux</string>
	<string name="label_name_of_level">Nom du niveau</string>
	<string name="label_spots">Repères</string>
	<string name="msg_enabling_wifi">Activation du WiFi</string>
	<string name="msg_please_activate_wifi">Veuillez activer le Wifi</string>
	<string name="msg_internet_unreachable_check_connection">Le réseau Internet n\'est pas accessible. Vérifiez votre connexion.</string>
	<string name="label_delete_measures">Supprimer les mesures</string>
	<string name="msg_no_internet_connection">Pas de connexion à Internet.</string>
	<string name="btn_Yes">Oui</string>
	<string name="btn_No">Non</string>
	<string name="msg_disabling_wifi">Désaction du WiFi</string>
	<string name="msg_wifi_required">WiFi requis</string>
	<string name="label_location">Position</string>
	<string name="label_locations">Positions</string>
	<string name="label_locations_management">Gestion des positions</string>
	<string name="label_measures_management">Gestion des mesures</string>
	<string name="label_buildings_management">Gestion des bâtiments</string>
	<string name="btn_OK">OK</string>
	<string name="btn_Cancel">Annuler</string>
	<string name="label_level_name">Nom du niveau</string>
	<string name="btn_Create">Créer</string>
	<string name="btn_Connection">Connexion</string>
	<string name="label_levels_management">Gestion des niveaux</string>
	<string name="label_buildings">Bâtiments</string>
	<string name="label_new_building">Nouveau bâtiment</string>
	<string name="label_new_spot">Nouveau repère</string>
	<string name="label_emergency">Urgence</string>
	<string name="label_name_of_spot">nom du repère</string>
	<string name="label_name_of_building">nom du bâtiment</string>
	<string name="msg_new_name_must_be_different">Le nouveau nom doit être différent de l\'ancien.</string>
	<string name="msg_please_give_name">Veuillez donner un nom.</string>
	<string name="label_rename">Renommer</string>
	<string name="label_new_name">Nouveau nom</string>
	<string name="msg_problem_list_buildings">Problème. Impossible de lister les bâtiments.</string>
	<string name="label_comment">Commentaire</string>
	<string name="label_quit">Quitter</string>
	<string name="msg_please_wait">Veuillez patienter</string>
	<string name="msg_measures_sent_later">Les mesures seront envoyées au serveur quand un accès à Internet sera disponible.</string>
	<string name="msg_new_version_available">Une nouvelle version de l\'application est disponible.</string>
	<string name="label_update">Mise à jour</string>
	<string name="msg_do_you_want_to_visite_website">Voulez-vous visiter le site ?</string>
	<string name="msg_visit_website">Consultez le site http://www.ludvin.org.</string>
	<string name="url_website_ludvin">http://www.ludvin.org</string>
	<string name="msg_empty_list">Liste vide.</string>
	<string name="msg_cant_identify">Impossible de vous identifier.</string>
	<string name="msg_problem">Problème.</string>
	<string name="msg_bad_email_address">Adresse email incorrecte.</string>
	<string name="msg_please_give_password">Veuillez saisir un mot de passe.</string>
	<string name="label_version">Version</string>
	<string name="msg_measures_sent_to_server">Les mesures ont été envoyées au serveur.</string>
	<string name="msg_up_to_date">A jour</string>
	<string name="msg_outdated">Une version plus récente existe</string>
	<string name="msg_problem_delete_building">Problème. Impossible de supprimer le bâtiment.</string>
	<string name="msg_problem_rename_building">Problème. Impossible de renommer le bâtiment.</string>
	<string name="msg_problem_create_building">Problème. Impossible de créer le bâtiment.</string>
	<string name="label_list_buildings">Lister les bâtiments</string>
	<string name="msg_problem_create_level">Problème. Impossible de créer le niveau.</string>
	<string name="msg_problem_list_levels">Problème. Impossible de lister les niveaux.</string>
	<string name="msg_problem_rename_level">Problème. Impossible de renommer le niveau.</string>
	<string name="msg_problem_delete_level">Problème. Impossible de supprimer le niveau.</string>
	<string name="msg_problem_list_spots">Problème. Impossible de lister les repères.</string>
	<string name="label_measures_not_sent">Mesures non envoyés au serveur.</string>
	<string name="msg_ask_send_measures_offline">Voulez-vous envoyer les mesures en cache ?</string>
	<string name="label_send_auto">Envoyer automatiquement</string>
	<string name="label_save_informations">Mémoriser mes informations</string>
	<string name="msg_please_log_in">Veuillez vous identifier</string>
	<string name="label_login">Identifiant :</string>
	<string name="label_password">Mot de passe :</string>
	<string name="msg_problem_create_spot">Problème. Impossible de créer le repère.</string>
	<string name="msg_problem_rename_spot">Problème. Impossible de renommer le repère.</string>
	<string name="msg_problem_delete_spot">Problème. Impossible de supprimer le repère.</string>
<string name="msg_problem_list_measures">Problème. Impossible de lister les mesures.</string>
<string name="label_clean_cache">Vider le cache complet</string>
</resources>